--- a/main.css
+++ b/main.css
@@ -242,12 +242,12 @@ a {
     .nav-judul h2 {
         font-size: 2rem;
     }
-
+    
     .navbar .nav-menu i {
         font-size: 2.5rem;
         height: 100%;
         line-height: 100%;
-        display: inline-block;
+        display: block;
         /* background: blue; */
         padding: 1rem;
     }
